--- a/paginas/consultas.html
+++ b/paginas/consultas.html
@@ -81,6 +81,8 @@
 	<section class="container">
 		<div class="main-container">
 			<div class="workin">
+				<form action="" method="POST" class="formu">
+
 				<p>Escriba la pregunta: </p>
 					<textarea name="pregunta" rows="4" cols="50"></textarea>
 
@@ -89,7 +91,7 @@
 					<p>Respuesta: <input type="text" name="respuesta"><input type="submit" value="Agregar respuesta"></p>
 
 					<input type="submit" value="Enviar">
-
+				</form>>
 			</div>
 		</div>
 	</section>
