LA PUTA EÑE- UPDATE

--- a/paginas/consultas.html
+++ b/paginas/consultas.html
@@ -91,7 +91,7 @@
 					<p>Respuesta: <input type="text" name="respuesta"><input type="submit" value="Agregar respuesta"></p>
 
 					<input type="submit" value="Enviar">
-				</form>>
+				</form>
 			</div>
 		</div>
 	</section>
